'Issue #3241359: Layout paragraphs top button overlaps bottom button below a paragraph'

--- a/styles/components/_layout_paragraphs.scss
+++ b/styles/components/_layout_paragraphs.scss
@@ -262,14 +262,6 @@
       margin: 0;
     }
   }
-
-  .layout-paragraphs-add-content__toggle {
-    top: 24px;
-  }
-
-  & > .layout-paragraphs-add-content__toggle {
-    top: 100%;
-  }
 }
 
 // Item is moving, outline
